--- a/EmoArt/EmoArt/Info.plist
+++ b/EmoArt/EmoArt/Info.plist
@@ -22,6 +22,10 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Need access to camera</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Need access to photo library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need access to photo library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
